company page dikit

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <p class="mb-4">Kami mencipta rasa dengan sepenuh hati. Mengolah berbagai produk makanan yang kami racik dari resep orisinal. 
                             Sejak tahun 2005 sampai sekarang, Meraki Cipta Rasa terus tumbuh dan berkembang bersama klien setia kami yang terus bertambah tiap harinya. 
                             Kami menyediakan produk makanan yang diolah dari bahan pilihan dengan proses pembuatan yang baik untuk menjaga mutu serta kualitas.</p>
-                        <a href="" class="btn btn-primary py-sm-3 px-sm-5 rounded-pill mt-3">Read More</a>
+                        <a href="company.html" class="btn btn-primary py-sm-3 px-sm-5 rounded-pill mt-3">Read More</a>
                     </div>
                     <div class="col-lg-6">
                         <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.png">
