--- a/company.html
+++ b/company.html
@@ -70,9 +70,7 @@
                             <hr class="bg-white mx-auto mt-0" style="width: 90px;">
                             <nav aria-label="breadcrumb">
                                 <ol class="breadcrumb justify-content-center">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                                    <li class="breadcrumb-item text-white active" aria-current="page">About</li>
+                                    <p class="text-white animated slideInDown mb-4">Know Us More Here</P>
                                 </ol>
                             </nav>
                         </div>
@@ -82,8 +80,26 @@
         </div>
         <!-- Navbar & Hero End -->
 
+        <!-- About Start -->
+        <div class="container-xxl py-5">
+            <div class="container py-5 px-lg-5">
+                <div class="row g-5 align-items-center">
+                    <div class="wow fadeInUp" data-wow-delay="0.1s">
+                        <p class="section-title text-secondary justify-content-center"><span></span>About Us<span></span></p>
+                        <h1 class="text-center mb-5">Meraki Cipta Rasa</h1>
+                        <p class="mb-4 text-justify fw-semibolder">Meraki berasal dari Bahasa Yunani yang berarti ‘mengerjakan sepenuh jiwa’. 
+                            Sejalan dengan makna tersebut, Meraki Cipta Rasa pun selalu berusaha bekerja menciptakan produk yang bercita rasa dengan sepenuh hati. 
+                            Kami mengolah berbagai produk makanan sejak tahun 2005. Pada tahun 2009 kami memproduksi cireng hingga 17.000 pcs setiap hari. 
+                            Beberapa tahun kemudian, jenis makanan yang dihasilkan pun semakin bervariasi, berbagai varian cireng dan cilok hingga dimsum pun diproduksi dengan merek PONDOK CABE.
+                        </p>
+                    </div>
+                   
+                </div>
+            </div>
+        </div>
+        <!-- About End -->
 
-        <!-- Feature Start -->
+        <!-- Key Activities Start -->
         <div class="container-xxl py-5">
             <div class="container py-5 px-lg-5">
                 <div class="wow fadeInUp" data-wow-delay="0.1s">
@@ -115,53 +131,48 @@
                 </div>
             </div>
         </div>
-        <!-- Feature End -->
-
-
-        <!-- About Start -->
-        <div class="container-xxl py-5">
-            <div class="container py-5 px-lg-5">
-                <div class="row g-5 align-items-center">
-                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <p class="section-title text-secondary">About Us<span></span></p>
-                        <h1 class="mb-5">#1 Digital solution with 10 years of experience</h1>
-                        <p class="mb-4">Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit clita duo justo eirmod magna dolore erat amet</p>
-                        <a href="" class="btn btn-primary py-sm-3 px-sm-5 rounded-pill mt-3">Read More</a>
-                    </div>
-                    <div class="col-lg-6">
-                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.png">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- About End -->
-
+        <!-- Key Activities End -->
 
         <!-- Facts Start -->
         <div class="container-xxl bg-primary fact py-5 wow fadeInUp" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
+               <!-- Key Activities Start -->
+        <div class="container-xxl py-5">
+            <div class="container py-5 px-lg-5">
+                <div class="wow fadeInUp" data-wow-delay="0.1s">
+                    <p class="section-title text-secondary justify-content-center text-white"><span></span>Key Activities<span></span></p>
+                    <h1 class="text-center mb-5 text-white">What are our company working on</h1>
+                </div>
                 <div class="row g-4">
-                    <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
-                        <i class="fa fa-certificate fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
-                        <p class="text-white mb-0">Years Experience</p>
+                    <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="feature-item bg-light rounded text-center p-4">
+                            <i class="fa fa-3x fa-mail-bulk text-primary mb-4"></i>
+                            <h5 class="mb-3">Visi</h5>
+                            <p class="m-0">Menjadi penyedia jasa yang amanah dan memproduksi makanan yang halal serta thoyib.</p>
+                        </div>
                     </div>
-                    <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
-                        <i class="fa fa-users-cog fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
-                        <p class="text-white mb-0">Team Members</p>
-                    </div>
-                    <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
-                        <i class="fa fa-users fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
-                        <p class="text-white mb-0">Satisfied Clients</p>
-                    </div>
-                    <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
-                        <i class="fa fa-check fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
-                        <p class="text-white mb-0">Compleate Projects</p>
+                    <div class="col-xl-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="feature-item bg-light rounded text-center p-4">
+                            <i class="fa fa-3x fa-search text-primary mb-4"></i>
+                            <h5 class="mb-3">Misi</h5>
+                            <p class="m-0">
+                                <ul>
+                                    <li class="text-start">Memilih, mengolah dan menyajikan makanan sesuai syariat Islam.</li>
+                                </ul>
+                                <ul>
+                                    <li class="text-start">Memilih, mengolah dan menyajikan makanan sesuai syariat Islam.</li>
+                                </ul>
+                                <ul>
+                                    <li class="text-start">Memilih, mengolah dan menyajikan makanan sesuai syariat Islam.</li>
+                                </ul>
+                            </p>
+                        </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <!-- Key Activities End -->
+
             </div>
         </div>
         <!-- Facts End -->
@@ -179,14 +190,12 @@
                         <div class="team-item bg-light rounded">
                             <div class="text-center border-bottom p-4">
                                 <img class="img-fluid rounded-circle mb-4" src="img/team-1.jpg" alt="">
-                                <h5>John Doe</h5>
-                                <span>CEO & Founder</span>
+                                <h5>Santi Hakim</h5>
+                                <span>Director</span>
                             </div>
                             <div class="d-flex justify-content-center p-4">
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                                <p>More than 20 years working as Manager and Project Director in publisher, media, and culinary business. 
+                                    Certificate: BNSP for SME’s, Food Handler</p>
                             </div>
                         </div>
                     </div>
@@ -194,14 +203,12 @@
                         <div class="team-item bg-light rounded">
                             <div class="text-center border-bottom p-4">
                                 <img class="img-fluid rounded-circle mb-4" src="img/team-2.jpg" alt="">
-                                <h5>Jessica Brown</h5>
-                                <span>Web Designer</span>
+                                <h5>Meliana</h5>
+                                <span>R&D/QC</span>
                             </div>
                             <div class="d-flex justify-content-center p-4">
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                                <p>Since 2005 working on new recipes and producing various of starch products, 
+                                    processed meat/poultry, spices.</p>
                             </div>
                         </div>
                     </div>
@@ -209,14 +216,28 @@
                         <div class="team-item bg-light rounded">
                             <div class="text-center border-bottom p-4">
                                 <img class="img-fluid rounded-circle mb-4" src="img/team-3.jpg" alt="">
-                                <h5>Tony Johnson</h5>
-                                <span>SEO Expert</span>
+                                <h5>Redi Ruslan</h5>
+                                <span>Production</span>
                             </div>
                             <div class="d-flex justify-content-center p-4">
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-square mx-1" href=""><i class="fab fa-linkedin-in"></i></a>
+                                <p>Producing variety of processed food, designing and creating machinery for food production Certificate: 
+                                    Halal Slaughter from Indonesia Ulema Council (MUI)
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                        <div class="team-item bg-light rounded">
+                            <div class="text-center border-bottom p-4">
+                                <img class="img-fluid rounded-circle mb-4" src="img/team-3.jpg" alt="">
+                                <h5>Tejo Fajar</h5>
+                                <span>Marketing</span>
+                            </div>
+                            <div class="d-flex justify-content-center p-4">
+                                <p>
+                                    More than 12 years working as marketing in private banks and spending the 
+                                    last 15 years in packaging industry
+                                </p>
                             </div>
                         </div>
                     </div>
