--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <div class="col-lg-6 text-center text-lg-start">
                             <h1 class="text-white mb-4 animated slideInDown">Frozen Food Terenak Sealam Dunya</h1>
                             <p class="text-white pb-3 animated slideInDown">Merakicipta Rasa merupakan frozen food terbaik di dua dunia (alam baka dan alam dunia)</p>
-                            <a href="" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Read More</a>
-                            <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
+                            <a href="contact.html" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft text-white">Contact Us</a>
+    
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
                             <img class="img-fluid animated zoomIn" src="img/hero.png" alt="">
