--- a/contact.html
+++ b/contact.html
@@ -70,11 +70,7 @@
                             <h1 class="text-white animated slideInDown">Contact</h1>
                             <hr class="bg-white mx-auto mt-0" style="width: 90px;">
                             <nav aria-label="breadcrumb">
-                                <ol class="breadcrumb justify-content-center">
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                                    <li class="breadcrumb-item text-white active" aria-current="page">Contact</li>
-                                </ol>
+                                <p class="text-white animated slideInDown mb-4">Reach Us Here</P>
                             </nav>
                         </div>
                     </div>
