banyak bgt ampe bingung

--- a/company.html
+++ b/company.html
@@ -87,7 +87,7 @@
                     <div class="wow fadeInUp" data-wow-delay="0.1s">
                         <p class="section-title text-secondary justify-content-center"><span></span>About Us<span></span></p>
                         <h1 class="text-center mb-5">Meraki Cipta Rasa</h1>
-                        <p class="mb-4 text-justify fw-semibolder">Meraki berasal dari Bahasa Yunani yang berarti ‘mengerjakan sepenuh jiwa’. 
+                        <p class="mb-4 text-center fw-semibolder">Meraki berasal dari Bahasa Yunani yang berarti ‘mengerjakan sepenuh jiwa’. 
                             Sejalan dengan makna tersebut, Meraki Cipta Rasa pun selalu berusaha bekerja menciptakan produk yang bercita rasa dengan sepenuh hati. 
                             Kami mengolah berbagai produk makanan sejak tahun 2005. Pada tahun 2009 kami memproduksi cireng hingga 17.000 pcs setiap hari. 
                             Beberapa tahun kemudian, jenis makanan yang dihasilkan pun semakin bervariasi, berbagai varian cireng dan cilok hingga dimsum pun diproduksi dengan merek PONDOK CABE.
