--- a/contact.html
+++ b/contact.html
@@ -87,8 +87,26 @@
                     <p class="section-title text-secondary justify-content-center"><span></span>Contact Us<span></span></p>
                     <h1 class="text-center mb-5">Contact For Any Query</h1>
                 </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-7">
+                <div class="row justify-content-start">
+                    <div class="col-xl-4 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="feature-item bg-light rounded text-start p-4">
+                            <p class="section-title text-black h5 mb-4">Address<span></span></p>
+                            <p><i class="fa fa-map-marker-alt me-3"></i>Perumahan Pondok Cabe Indah, Jl. Citanduy Blok D6, Pondok Cabe Ilir, Pamulang, South Tangerang City, Banten 15438</p>
+                            <div>
+                                <p><i class="fa fa-phone-alt me-3"></i>0877-7337-9369</p>
+                            </div>
+                            <div>
+                                <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                            </div>
+                            <div>
+                                <p><i class="fab fa-whatsapp me-2"></i>info@example.com</p>
+                            </div>
+                            <div>
+                                <p><i class="far fa-envelope me-2"></i>info@example.com</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
                         <div class="wow fadeInUp" data-wow-delay="0.3s">
                             <p class="text-center mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
                             <form>
@@ -137,6 +155,7 @@
                         <p><i class="fa fa-map-marker-alt me-3"></i>Perumahan Pondok Cabe Indah, Jl. Citanduy Blok D6, Pondok Cabe Ilir, Pamulang, South Tangerang City, Banten 15438</p>
                         <p><i class="fa fa-phone-alt me-3"></i>0877-7337-9369</p>
                         <p><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                        <p class="section-title text-secondary justify-content-center"><span></span>Contact Us<span></span></p>
                         <div class="d-flex pt-2 gap-2">
                             <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/merakiciptarasa?igsh=YXlwbWttcTVrdm5y"><i class="fab fa-instagram"></i></a>
                             <a class="btn btn-outline-light btn-social" href="https://api.whatsapp.com/send/?phone=6287773379369&text=Terima+kasih+telah+menghubungi+Meraki+Cipta+Rasa%2C+Mari+saya+bantu%21&type=phone_number&app_absent=0"><i class="fab fa-whatsapp"></i></a>
@@ -170,7 +189,6 @@
                             </div>
                         </div>
                     </div>
-                    
                 </div>
             </div>
             <div class="container px-lg-5">
