--- a/index.html
+++ b/index.html
@@ -262,6 +262,34 @@
         </div>
         <!-- Projects End -->
 
+    <!-- Galery start -->
+    <div class="wow fadeInUp" data-wow-delay="0.1s">
+        <h1 class="text-center mb-5">Gallery</h1>
+    </div>
+        <div class="col-md-12 col-xl-11 ms-5 row-gap-2">
+            <p class="section-title text-white h5 mb-4">Gallery<span></span></p>
+            <div class="row g-2">
+                <div class="col-4">
+                    <img class="img-fluid" src="img/portfolio-1.jpg" alt="Image">
+                </div>
+                <div class="col-4">
+                    <img class="img-fluid" src="img/portfolio-2.jpg" alt="Image">
+                </div>
+                <div class="col-4">
+                    <img class="img-fluid" src="img/portfolio-3.jpg" alt="Image">
+                </div>
+                <div class="col-4">
+                    <img class="img-fluid" src="img/portfolio-4.jpg" alt="Image">
+                </div>
+                <div class="col-4">
+                    <img class="img-fluid" src="img/portfolio-5.jpg" alt="Image">
+                </div>
+                <div class="col-4">
+                    <img class="img-fluid" src="img/portfolio-6.jpg" alt="Image">
+                </div>
+            </div>
+        </div>
+        <!-- Galery end -->
 
         <!-- Testimonial Start -->
         <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
@@ -303,6 +331,9 @@
             </div>
         </div>
         <!-- Testimonial End -->
+
+    
+
         <!-- Footer Start -->
         <div class="container-fluid bg-primary text-light footer wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5 px-lg-5">
